Flight day changes

--- a/FirstCompletePrototype/Software/AltimeterBLE/Application/src/main/res/values/strings.xml
+++ b/FirstCompletePrototype/Software/AltimeterBLE/Application/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="edit_SLP_message">Edit Sea Level Pressure:</string>
     <string name="edit_2apogee_message">Edit Second Deployment Altitude:</string>
     <string name="button_send">Send</string>
-    <string name="button_set">Set Second Deployment</string>
+    <string name="button_set">Settings</string>
 
     //In-flight Screen
     <string name="in_flight">In Flight</string>
@@ -61,10 +61,10 @@
     <string name="get_data">Get Data</string>
     <string name="button_post_flight">Post Flight</string>
     <string name="current_data">Current Data</string>
-    
+
     //Graph
-    <string name="button_graph">Graph</string>
-    <string name="graph_title">Altimeter Graph</string>
+    <string name="button_graph">View Flight Data</string>
+    <string name="graph_title">Flight Data</string>
 
     <!-- Menu items -->
     <string name="menu_connect">Connect</string>
